--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+attrs==23.1.0
 certifi==2023.7.22
 charset-normalizer==3.2.0
 coreapi==2.3.3
@@ -8,11 +9,14 @@ django-filter==23.3
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+drf-spectacular==0.26.5
 drf-yasg==1.21.7
 idna==3.4
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
 MarkupSafe==2.1.3
 openapi-codec==1.3.2
 packaging==23.1
@@ -21,7 +25,9 @@ psycopg2-binary==2.9.7
 PyJWT==2.8.0
 pytz==2023.3.post1
 PyYAML==6.0.1
+referencing==0.30.2
 requests==2.31.0
+rpds-py==0.10.3
 simplejson==3.19.1
 sqlparse==0.4.4
 typing_extensions==4.8.0
