--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     image: 'postgres:14.3'
     volumes:
       - pgdata:/var/lib/postgresql/data
-#    env_file:
-#      - .env
+    env_file:
+      - .env
     ports:
-      - "5433:5432"
+      - "5432:5432"
 
-  web:
+  backend:
     build:
       context: .
     ports:
@@ -18,8 +18,8 @@ services:
       - ./:/app
     depends_on:
       - postgres
-#    env_file:
-#      - .env
+    env_file:
+      - .env
     entrypoint: ''
     command: '/app/scripts/docker-entrypoint.sh'
 
