--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,5 @@
 version: "3.8"
 services:
-  postgres:
-    image: 'postgres:14.3'
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    env_file:
-      - .env
-    ports:
-      - "5432:5432"
 
   backend:
     build:
@@ -18,10 +10,17 @@ services:
       - ./:/app
     depends_on:
       - postgres
-    env_file:
-      - .env
-    entrypoint: ''
-    command: '/app/scripts/docker-entrypoint.sh'
+#    env_file:
+#      - .env
+
+  postgres:
+    image: 'postgres:14.3'
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+#    env_file:
+#      - .env
+    ports:
+      - "5432:5432"
 
 
 volumes:
