--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,28 @@
-asgiref==3.7.2
-attrs==23.1.0
-certifi==2023.7.22
-charset-normalizer==3.2.0
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==41.0.4
+defusedxml==0.7.1
 Django==4.2.5
+django-allauth==0.57.0
 django-filter==23.3
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-spectacular==0.26.5
-drf-yasg==1.21.7
-idna==3.4
-inflection==0.5.1
-itypes==1.2.0
-Jinja2==3.1.2
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
-MarkupSafe==2.1.3
+oauthlib==3.2.2
 openapi-codec==1.3.2
-packaging==23.1
 psycopg==3.1.12
 psycopg2-binary==2.9.7
+pycparser==2.21
 PyJWT==2.8.0
+python3-openid==3.2.0
 pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.30.2
 requests==2.31.0
+requests-oauthlib==1.3.1
 rpds-py==0.10.3
 simplejson==3.19.1
 sqlparse==0.4.4
